ghost/ghost-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ghost
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: "ghost"
        track: "stable"
    spec:
      containers:
        - name: "ghost"
          image: "kelseyhightower/ghost:0.7.7"
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - name: "ghost"
              mountPath: "/etc/ghost"
      volumes:
        - name: "ghost"
          secret:
            secretName: "ghost"
